Fix responsive overflow.

--- a/public/assets/sass/layouts/_home.scss
+++ b/public/assets/sass/layouts/_home.scss
@@ -447,7 +447,8 @@ body.home {
 
         .advantages-container
         {
-            padding:40px 10px;
+            padding-top:40px;
+            padding-bottom: 40px;
             .row.details{
                 padding-top:15px;
                 display: flex;
@@ -839,7 +840,8 @@ body.home {
             margin-top:10px;
         }
         div.container{
-            padding: 30px 0 40px 0;     
+            padding-top: 30px;
+            padding-bottom: 40px;  
             div.channel{
                     div.img-container{
                         height: 200px;
